--- a/lp.css
+++ b/lp.css
@@ -46,13 +46,13 @@
 body {
   display: flex;
   justify-content: center;
-  height: 100vh;
   background-color: rgb(131, 131, 131);
 }
 
 .main-body {
   border: 2px solid red;
-  width: 800px;
+  width: 1000px;
+  height: 100vh;
 }
 
 .nav-bar {
@@ -86,4 +86,77 @@ li {
 
 .txt {
   width: 400px;
+  transform: translateY(120px);
+  margin-left: 80px;
+  font-size: 1.3rem;
+  word-wrap: break-word;
+}
+
+.bold {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.rat {
+  width: 400px;
+  transform: translateY(-63px);
+  margin-left: 490px;
+}
+
+.bar-one {
+  background-color: rgb(109, 39, 39);
+}
+
+.bar-one-button {
+  border: none;
+  background-color: rgb(0, 0, 0);
+  padding: 10px;
+  transform: translateY(35px);
+  color: aquamarine;
+}
+
+.bar-two {
+  background-color: red;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 90px 90px 90px 90px;
+  justify-content: center;
+  gap: 40px;
+  transform: translateY(30px);
+}
+
+.cube {
+  border: 2px solid blue;
+  height: 90px;
+  width: 90px;
+  border-radius: 10px;
+}
+
+.sometxt {
+  transform: translateY(-40px);
+  margin-left: 10px;
+  width: 90px;
+  word-wrap: break-word;
+}
+
+.randominfo {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+}
+
+.bar-three {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 266px;
+  background-color: beige;
+}
+
+.quote {
+  word-wrap: break-word;
+  width: 400px;
+  font-size: 1.5rem;
 }
